[gd_scene load_steps=23 format=3 uid="uid://ddwpv25hwvrn5"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_eb43b"]
[ext_resource type="Texture2D" uid="uid://c3r5xcwiujogq" path="res://Art/Player/legs.png" id="2_h6q0t"]
[ext_resource type="Texture2D" uid="uid://b4st8x321iv8o" path="res://Art/Player/torso.png" id="3_htymu"]
[ext_resource type="Script" path="res://Player/PlayerState.gd" id="4_618fp"]
[ext_resource type="Texture2D" uid="uid://c3knb4a5r7l6g" path="res://Art/Player/head.png" id="4_b4eb3"]
[ext_resource type="PackedScene" uid="uid://bq2x0ivjdur2s" path="res://Misc/state_machine.tscn" id="5_0f51r"]
[ext_resource type="Texture2D" uid="uid://5o8rsvue5vvh" path="res://Art/Player/flashlight.png" id="5_5yhyi"]
[ext_resource type="Script" path="res://Player/PlayerIdleState.gd" id="8_l246e"]
[ext_resource type="Script" path="res://Player/PlayerRunState.gd" id="8_tqb1k"]
[ext_resource type="Script" path="res://Player/PlayerWalkState.gd" id="9_cmpxc"]
[ext_resource type="Texture2D" uid="uid://nvjsekynvlax" path="res://Art/Misc/lungs.png" id="10_04m0p"]
[ext_resource type="Texture2D" uid="uid://cs5hm56w5ov07" path="res://Art/Player/flashlight_texture_huge.png" id="12_s2gxw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p8np2"]
radius = 15.0

[sub_resource type="Animation" id="Animation_vroed"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UpperBody/FlashLight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../FlashLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rp0ot"]
resource_name = "flashlight_end"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UpperBody/FlashLight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../FlashLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_flashlight_mode"
}]
}

[sub_resource type="Animation" id="Animation_ousra"]
resource_name = "flashlight_start"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../UpperBody/FlashLight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [5, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../FlashLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_flashlight_mode"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uv8jl"]
_data = {
"RESET": SubResource("Animation_vroed"),
"flashlight_end": SubResource("Animation_rp0ot"),
"flashlight_start": SubResource("Animation_ousra")
}

[sub_resource type="Animation" id="Animation_mlv5l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LowerBody/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UpperBody/FlashLight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlashLight:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_61e43"]
resource_name = "walk"
length = 2.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LowerBody/Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbsxs"]
_data = {
"RESET": SubResource("Animation_mlv5l"),
"walk": SubResource("Animation_61e43")
}

[sub_resource type="Gradient" id="Gradient_uak13"]
offsets = PackedFloat32Array(0, 0.480519)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_esl6s"]
gradient = SubResource("Gradient_uak13")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_eb43b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p8np2")

[node name="LowerBody" type="Node2D" parent="."]

[node name="Legs" type="Sprite2D" parent="LowerBody"]
texture = ExtResource("2_h6q0t")
hframes = 23

[node name="UpperBody" type="Node2D" parent="."]

[node name="Torso" type="Sprite2D" parent="UpperBody"]
texture = ExtResource("3_htymu")

[node name="Head" type="Sprite2D" parent="UpperBody"]
texture = ExtResource("4_b4eb3")

[node name="FlashLight" type="Sprite2D" parent="UpperBody"]
texture = ExtResource("5_5yhyi")
hframes = 6

[node name="FlashlightAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
libraries = {
"": SubResource("AnimationLibrary_uv8jl")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lbsxs")
}

[node name="StateMachine" parent="." node_paths=PackedStringArray("current_state") instance=ExtResource("5_0f51r")]
current_state = NodePath("PlayerIdle")

[node name="PlayerState" type="Node" parent="StateMachine"]
script = ExtResource("4_618fp")

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("8_l246e")

[node name="PlayerRun" type="Node" parent="StateMachine"]
script = ExtResource("8_tqb1k")

[node name="PlayerWalk" type="Node" parent="StateMachine"]
script = ExtResource("9_cmpxc")

[node name="StaminaRestoreTimer" type="Timer" parent="StateMachine"]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="StaminaBar" type="TextureProgressBar" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.96
anchor_top = 0.932
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 36.7999
offset_top = 33.4399
grow_horizontal = 0
grow_vertical = 0
max_value = 240.0
value = 240.0
fill_mode = 3
texture_progress = ExtResource("10_04m0p")

[node name="FlashLight" type="PointLight2D" parent="."]
position = Vector2(7.5, -25)
energy = 0.6
shadow_enabled = true
texture = ExtResource("12_s2gxw")
offset = Vector2(0, -200)

[node name="PlayerLight" type="PointLight2D" parent="."]
energy = 0.5
texture = SubResource("GradientTexture2D_esl6s")
texture_scale = 2.0

[connection signal="state_change" from="." to="StateMachine" method="on_state_change"]
[connection signal="animation_change" from="StateMachine/PlayerState" to="." method="_on_animation_change"]
[connection signal="state_change" from="StateMachine/PlayerState" to="StateMachine" method="on_state_change"]
[connection signal="timeout" from="StateMachine/StaminaRestoreTimer" to="." method="_on_stamina_restore_timer_timeout"]
